# MapleStory-Client

./: .dockerignore  .gitignore  AES.cpp  AES.h  AbstractItemHandler.h  AbstractItemHandler83.h  Account.cpp  Account.h  Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  AnimationData.cpp  AnimationData.h  AreaButton.cpp  AreaButton.h  Audioplayer.h  AudioplayerBass.cpp  AudioplayerBass.h  BitmapWrapper.h  BitmapWrapperD2D.cpp  BitmapWrapperD2D.h  BitmapWrapperGL.cpp  BitmapWrapperGL.h  BodyAction.h  BodyData.cpp  BodyData.h  BodyDrawinfo.cpp  BodyDrawinfo.h  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  ChangeMapPacket.h  Char.cpp  Char.h  CharConstants.h  CharCreationPackets.h  CharCreationPackets83.h  CharEntry.cpp  (+268 more)
.devcontainer/: Dockerfile  devcontainer.json
Audio/: Audio.cpp  Audio.h  Audioplayer.cpp  Audioplayer.h  AudioplayerBass.cpp  AudioplayerBass.h  Sound.cpp  Sound.h  SoundFactory.cpp  SoundFactory.h  membuf.cpp  membuf.h
AudioT/: Audio.cpp
Character/: ActiveBuffs.cpp  ActiveBuffs.h  Buff.cpp  Buff.h  BuffEffects.cpp  BuffEffects.h  Buffstat.h  Char.cpp  Char.h  CharConstants.h  CharEffect.cpp  CharEffect.h  CharJob.cpp  CharJob.h  CharStats.cpp  CharStats.h  Charstats.cpp  Charstats.h  EquipConstants.h  EquipStat.h  Equipstat.cpp  Equipstat.h  ExpTable.cpp  ExpTable.h  Initializer.cpp  Initializer.h  Job.cpp  Job.h  MapleStat.cpp  Maplestat.cpp  Maplestat.h  MonsterBook.cpp  MonsterBook.h  Monsterbook.cpp  Monsterbook.h  OtherChar.cpp  OtherChar.h  PassiveBuffs.cpp  PassiveBuffs.h  PlayableChar.h  (+20 more)
Character/Inventory/: BulletData.cpp  BulletData.h  Equip.cpp  Equip.h  EquipQuality.cpp  EquipQuality.h  Inventory.cpp  Inventory.h  InventoryType.cpp  InventoryType.h  Item.cpp  Item.h  ItemData.cpp  ItemData.h  Pet.cpp  Pet.h  Weapon.cpp  Weapon.h
Character/Look/: Afterimage.cpp  Afterimage.h  Body.cpp  Body.h  BodyDrawInfo.cpp  BodyDrawInfo.h  BodyDrawinfo.cpp  BodyDrawinfo.h  Bodytype.cpp  Bodytype.h  CharEquips.cpp  CharEquips.h  CharLook.cpp  CharLook.h  Clothing.cpp  Clothing.h  EquipSlot.cpp  EquipSlot.h  Equipslot.cpp  Equipslot.h  Face.cpp  Face.h  Facetype.cpp  Facetype.h  Hair.cpp  Hair.h  Hairstyle.cpp  Hairstyle.h  PetLook.cpp  PetLook.h  Stance.cpp  Stance.h  Weapon.cpp  Weapon.h
CharacterT/: ActiveBuffs.cpp  Buff.cpp  Buff.h  Char.h  CharEffect.cpp  EquipStat.cpp  ExpTable.h  Job.cpp  MapleStat.h  MonsterBook.cpp  Player.h  PlayerStates.cpp  QuestLog.cpp  QuestLog.h  StatCaps.h  TeleportRock.h
CharacterT/Inventory/: Equip.cpp  EquipQuality.cpp  Inventory.cpp  Pet.h  Weapon.h
CharacterT/Look/: Body.h  BodyDrawInfo.h  EquipSlot.h
Data/: BulletData.cpp  BulletData.h  Cache.h  DataFactory.cpp  DataFactory.h  EquipData.cpp  EquipData.h  ItemData.cpp  ItemData.h  JobData.cpp  JobData.h  SkillData.cpp  SkillData.h  WeaponData.cpp  WeaponData.h
DataT/: EquipData.cpp  EquipData.h  WeaponData.cpp
Gameplay/: Attack.h  Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  Movement.cpp  Movement.h  MovementInfo.h  Playable.h  Skill.cpp  Skill.h  Spawn.cpp  Spawn.h  Stage.cpp  Stage.h  StageInterface.h
Gameplay/Combat/: Attack.h  Bullet.cpp  Bullet.h  BulletEffect.cpp  BulletEffect.h  Combat.cpp  Combat.h  DamageEffect.cpp  DamageEffect.h  DamageNumber.cpp  DamageNumber.h  RegularAttack.cpp  RegularAttack.h  Skill.cpp  Skill.h  SkillAction.cpp  SkillAction.h  SkillBullet.cpp  SkillBullet.h  SkillHitEffect.cpp  SkillHitEffect.h  (+6 more)
GameplayT/: Camera.cpp  Movement.h
Graphics/: Animation.cpp  Animation.h  Color.cpp  Color.h  DrawArgument.h  DrawContext.h  DynamicText.cpp  DynamicText.h  EffectLayer.cpp  EffectLayer.h  FontsFT.cpp  FontsFT.h  Geometry.cpp  Geometry.h  GraphicsD2D.cpp  GraphicsD2D.h  GraphicsEngine.cpp  GraphicsEngine.h  GraphicsGL.cpp  GraphicsGL.h  OutlinedText.h  SpecialText.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  TextWrapperGL.cpp  Textlabel.cpp  Textlabel.h  Texture.cpp  Texture.h
GraphicsT/: Text.h
IO/: Cursor.cpp  Cursor.h  Element.cpp  Element.h  GameElements.cpp  GameElements.h  InputConstants.h  KeyAction.h  KeyConfig.h  KeyType.h  Keyboard.cpp  Keyboard.h  LoginElements.cpp  LoginElements.h  Messages.cpp  Messages.h  UI.cpp  UI.h  UIDragElement.cpp  UIDragElement.h  UIElement.cpp  UIElement.h  UIElements.h  UIInterface.h  UIState.h  UIStateCashShop.cpp  UIStateCashShop.h  UIStateGame.cpp  UIStateGame.h  UIStateLogin.cpp  UIStateLogin.h  Window.cpp  Window.h  WindowD2D.cpp  WindowD2D.h  WindowGLFW.cpp  WindowGLFW.h
IOT/: KeyAction.h  KeyType.h  Keyboard.cpp  Keyboard.h  UIStateCashShop.cpp  UIStateCashShop.h  UIStateLogin.cpp  Window.h
Net/: AES256.cpp  AES256.h  Cryptography.cpp  Cryptography.h  CryptographyMaple.cpp  CryptographyMaple.h  InPacket.cpp  InPacket.h  Login.cpp  Login.h  NetConstants.h  OutPacket.cpp  OutPacket.h  PacketError.h  PacketHandler.h  PacketHandler83.h  PacketSwitch.cpp  PacketSwitch.h  Packethandler83.cpp  RecvOpcodes.h  RecvOpcodes83.h  SendOpcodes.h  SendOpcodes83.h  Session.cpp  Session.h  SessionInterface.h  SessionServer.cpp  SessionServer.h  SocketAsio.cpp  SocketAsio.h  SocketWinsock.cpp  SocketWinsock.h
NetT/: InPacket.cpp  OutPacket.h  SocketAsio.cpp
Program/: Client.cpp  Client.h  ClientInterface.h  Configuration.cpp  Configuration.h  Constants.h  TimeConstants.h
Template/: BoolPair.h  Cache.h  EnumMap.h  Enumeration.h  Interpolated.h  Optional.h  Point.h  Range.h  Rectangle.h  Singleton.h  TimedQueue.h  TypeMap.h
TemplateT/: BoolPair.h  Interpolated.h  Optional.h  Range.h  Rectangle.h
Util/: AlgorithmExt.h  BinaryTree.h  BoolPair.h  Configuration.h  Console.h  Enum.h  EnumMap.h  FunctionPointers.h  HardwareInfo.h  HashList.h  HashUtility.cpp  HashUtility.h  Interpolated.h  Lerp.h  Literals.h  Misc.cpp  Misc.h  NxFileManager.cpp  NxFileManager.h  NxFileMethods.cpp  NxFileMethods.h  NxFiles.cpp  NxFiles.h  Optional.h  Point.h  Ptrmap.h  Ptrvector.h  QuadTree.h  Randomizer.h  Range.h  Rectangle.h  ScreenResolution.h  Sha256.cpp  Sha256.h  Singleton.h  StopWatch.h  TimedBool.h  TypeMap.h  WzFiles.cpp  WzFiles.h  (+2 more)
UtilT/: Misc.h  QuadTree.h  Randomizer.h
(+487 files in other folders)
